--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 header {
-    background-image: linear-gradient(89.82deg, #1e1e1e -6.88%, rgba(0, 0, 0, 0) 87.45%), url(/assets/image/coffee_image.png);
+    background-image: linear-gradient(89.82deg, #1e1e1e -6.88%, rgba(0, 0, 0, 0) 87.45%), url(../image/coffee_image.png);
     background-size: cover;
     background-position: center;
     height: 768px;
@@ -81,7 +81,7 @@ header {
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    word-wrap: break-word;
+    display: inline-block;
 }
 
 /* Introduction */
@@ -136,7 +136,6 @@ main {
     align-items: center;
     gap: 20px;
     margin-top: 32px;
-    margin-bottom: 100px;
 }
 .card {
     background-color: #fff9f1;
@@ -168,5 +167,108 @@ main {
     color: #603809;
 }
 .card-button {
-    margin-top: 20px;
+    margin-top: 13px;
+}
+.coffee-blast1 {
+    position: absolute;
+    right: 0px;
+    top: 1030px;
+}
+/* advantage */
+.advantage {
+    margin-top: 82px;
+    text-align: center;
+}
+.advantage-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+.advantage-card {
+    background-color: #ffeed8;
+    text-align: center;
+    padding: 36px 30px;
+    display: block;
+}
+.advantage-icon {
+    padding-bottom: 25px;
+    margin: 0 auto;
+}
+.advantage-icon img {
+    margin: auto;
+}
+.advantage-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 37px;
+    color: var(--secondary);
+}
+.advantage-describe {
+    display: block;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    color: var(--text);
+    margin-top: 8px;
+}
+.advantage-btn {
+    margin-top: 24px;
+    display: block;
+}
+
+/* banner second */
+.banner-second {
+    background-image: url(../image/banner2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* padding: 135px 0; */
+    margin-top: 82px;
+    position: relative;
+}
+.banner-second::before {
+    content: "";
+    background-color: #603809;
+    opacity: 0.8;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.banner-second__content {
+    max-width: 575px;
+    padding: 135px 0px;
+}
+.banner-second__title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 54px;
+    line-height: 72px;
+    color: var(--white);
+    margin-bottom: 22px;
+}
+.banner-second__desc {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34px;
+    color: var(--white);
+}
+.banner-second__btn {
+    margin-top: 22px;
+}
+.banner-second__imgcup {
+    position: absolute;
+    top: 70px;
+    right: 0px;
+    z-index: 2;
+}
+.banner-second__coffeebean {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
