--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -227,9 +227,9 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* padding: 135px 0; */
     margin-top: 82px;
     position: relative;
+    margin-bottom: 82px;
 }
 .banner-second::before {
     content: "";
@@ -271,4 +271,117 @@ main {
     position: absolute;
     right: 0;
     bottom: 0;
+}
+
+/* Feedback */
+.feedback-section {
+    position: relative;
+}
+.feedback {
+    text-align: center;
+}
+.feedback h2 {
+    margin-bottom: 16px;
+}
+.feedback-container {
+    position: relative;
+}
+.btn-prev,
+.btn-next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -42px;
+    padding: 30px;
+    user-select: none;
+    background-color: var(--primary);
+    box-shadow: 0px 6px 12px rgba(249, 192, 106, 0.22);
+    border-radius: 16px;
+}
+.btn-prev {
+    left: 56px;
+}
+.btn-next {
+    right: 56px;
+    border-radius: 16px;
+}
+.feedback-content {
+    position: relative;
+    background-color: #fff9f1;
+    border: 1px solid rgba(249, 192, 106, 0.42);
+    padding: 130px 100px 110px 100px;
+    text-align: center;
+    max-width: 980px;
+    margin: 45px auto 0px auto;
+    display: none;
+    cursor: pointer;
+}
+.feedback-content::before {
+    content: "“";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 220px;
+    line-height: 112px;
+    position: absolute;
+    color: var(--secondary);
+    top: 54px;
+    left: 30px;
+}
+.feedback-content p {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 36px;
+    color: var(--text);
+    margin-bottom: 28px;
+}
+.feedback-content h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 43px;
+    color: var(--secondary);
+    margin-bottom: 4px;
+}
+.feedback-content span {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34px;
+    color: var(--text);
+}
+.feedback-avatar {
+    transform: translateY(45px);
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+.feedback-avatar img {
+    margin: auto;
+}
+.coffee-blast__feedback {
+    position: absolute;
+    left: 0px;
+    top: 74%;
+}
+.coffee-blast__feedback2 {
+    position: absolute;
+    right: 0px;
+    top: 5%;
+}
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1;
+    }
 }
